fix: add missing postinstall script to generate Prisma client

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "node server.js",
+    "postinstall": "prisma generate",
     "dev:next": "next dev --turbopack",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
