--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "next lint",
     "prisma": "prisma",
     "migrate": "prisma migrate dev --name init",
-    "seed": "prisma db seed"
+    "seed": "prisma db seed",
+    "supabase:types": "supabase gen types typescript --project-id wuohiryzfqiapkggvvhc > src/lib/supabase/types.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -43,6 +44,8 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.55.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -60,11 +63,8 @@
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^3.0.4",
     "recharts": "^2.15.4",
-    "socket.io": "4.8.1",
-    "socket.io-client": "4.8.1",
     "sonner": "^2.0.7",
     "spotify-web-api-node": "5.0.2",
-    "sqlite3": "5.1.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "zod": "^4.0.17"
@@ -78,6 +78,7 @@
     "@types/spotify-web-api-node": "^5.0.11",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "supabase": "^2.34.3",
     "tailwindcss": "^4",
     "tsx": "^4.20.4",
     "tw-animate-css": "^1.3.7",
